Transitioned to Tailwind CSS for site design and started iterating on the new design

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,10 @@
+// Tailwind
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+// Icons
+@import "../../node_modules/@fortawesome/fontawesome-pro/css/all.css";
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
-@import 'variables';
-
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+@import url("https://fonts.googleapis.com/css?family=Nunito");
