Updated application base font to Lato

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@
 @import "../../node_modules/@fortawesome/fontawesome-pro/css/all.css";
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Nunito");
+@import url("https://fonts.googleapis.com/css?family=Lato");
 
 // Prism.js Theme
 @import "prism.scss";
