--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,10 @@
     margin-bottom: 0 !important;
 }
 
+#accomplishments a {
+    text-decoration: underline;
+}
+
 #education ul,
 #experience ul,
 #projects ul,
