Updated accomplishments list styles

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,7 @@
     text-decoration: underline;
 }
 
+#accomplishments ul,
 #education ul,
 #experience ul,
 #projects ul,
@@ -27,6 +28,7 @@
     list-style: disc;
 }
 
+#accomplishments ul > li,
 #education ul > li,
 #experience ul > li,
 #projects ul > li,
