Fixed code blocks breaking page flow

--- a/resources/sass/prism.scss
+++ b/resources/sass/prism.scss
@@ -17,7 +17,7 @@ pre[class*="language-"] {
     line-height: 2;
     tab-size: 4;
     text-align: left;
-    white-space: pre;
+    white-space: pre-line;
     word-spacing: normal;
     word-break: normal;
 }
