--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -27,9 +27,8 @@
     }
 
     img {
-        border-radius: 0.5rem;
-        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-            0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        border: 2px solid #2d3748;
+        box-shadow: 4px 4px 0 #2d3748;
         max-width: 100%;
     }
 
