Improved markdown code snippet styles

--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -37,7 +37,8 @@
     }
 
     pre {
-        border-radius: 0.5rem;
+        border: 2px solid #2d3748;
+        box-shadow: 4px 4px 0 #2d3748;
         margin: 1rem 0;
         max-width: 100%;
 
