Updates to the user card design at various sizes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Lato");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300");
 
 // Prism.js Theme
 @import "prism.scss";
