--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -27,11 +27,15 @@
         @apply my-4;
     }
 
+    blockquote {
+        @apply border-l-4 border-gray-200 pl-2 ml-4;
+    }
+
     pre {
-        @apply border-2 border-gray-800 shadow-solid-gray-800 max-w-full my-4;
+        @apply block border-2 border-gray-800 shadow-solid-gray-800 max-w-full my-4;
 
         code {
-            @apply max-w-full overflow-x-scroll;
+            @apply block max-w-full overflow-x-scroll whitespace-pre p-6;
         }
     }
 
