--- a/resources/sass/prism.scss
+++ b/resources/sass/prism.scss
@@ -32,7 +32,7 @@ code[class*="language-"] ::selection {
 
 /* Code blocks */
 pre[class*="language-"] {
-    padding: 1.5em;
+    padding: 0;
     overflow: auto;
 }
 
