Removed border/shadow from images and shrunk featured post images

--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -20,7 +20,7 @@
     }
 
     img {
-        @apply border-2 border-gray-800 shadow-solid-gray-800 max-w-full;
+        @apply max-w-full;
     }
 
     p {
