--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -16,7 +16,7 @@
     }
 
     h4 {
-        @apply text-base .mb-4;
+        @apply text-base mb-4;
     }
 
     img {
@@ -28,7 +28,7 @@
     }
 
     blockquote {
-        @apply border-l-4 border-gray-200 pl-2 ml-4;
+        @apply border-l-4 border-gray-100 pl-2 ml-4;
     }
 
     hr {
@@ -36,7 +36,7 @@
     }
 
     code {
-        @apply bg-gray-200 rounded text-sm p-1;
+        @apply bg-gray-100 rounded text-sm p-1;
     }
 
     pre {
