Updated site layout

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,7 @@
 @import "../../node_modules/@fortawesome/fontawesome-pro/css/all.css";
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Lato");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:300");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@300&family=Nunito:wght@300;400;700&family=Source+Code+Pro&display=swap');
 
 // Markdown Formatting
 @import "markdown.scss";
