--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -62,4 +62,18 @@
             @apply ml-8 mb-2;
         }
     }
+
+    .video {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+        height: 0;
+    }
+
+    .video iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
